# StlVisualization

./: .App.cpp.swp  .App.h.swp  .Chart.cpp.swp  .RectangleDraw.cpp.swp  .gitignore  .logger.cpp.swp  App.cpp  App.h  CMakeLists.txt  Chart.cpp  Chart.h  build.sh  chart  config.txt  journal.txt  logger.cpp  logger_build.sh  partial_sum.txt  run.sh  run_test.sh  show.sh  testApp.cpp  visual_build.sh
logs/: RecordingPauseTest.txt
programs/: CMakeLists.txt  logger.cpp  visual.cpp
programs/logger/: CMakeLists.txt  adjacent_difference.cpp  copy_backward.cpp  heap.cpp  is_permutation.cpp  merge.cpp  my_copy.cpp  next_permutation.cpp  numeric.cpp  partition.cpp  reduce_accumulate.cpp  remove.cpp  remove_if.cpp  reverse_copy.cpp  rotate.cpp  shift.cpp  shuffle.cpp  sort.cpp  sort_list.cpp  transform_numeric.cpp  up_low_bound.cpp
src/: AccessLogger.cpp  AccessLogger.h  App.cpp  App.h  CMakeLists.txt  Chart.h  Common.cpp  Common.h  DebugLogger.cpp  DebugLogger.h  Event.h  Journal.cpp  Journal.h  Logger.h  Logic.cpp  NotifyingIterator.cpp  NotifyingIterator.h  Player.cpp  Player.h  RectangleDraw.cpp  Script.cpp  logger.cpp  testApp.cpp
src/Common/: CMakeLists.txt  Common.cpp  Common.h  Config.cpp  Config.h  Exception.h  Journal.cpp  Journal.h  Record.cpp  Record.h  Script.cpp  Script.h  TEMap.h
src/Logger/: AccessLogger.h  CMakeLists.txt  Case.h  DebugLogger.cpp  DebugLogger.h  Event.h  EventInterpreter.h  MyAlgorithm.h  NotifyingIterator.h  NullLogger.h  Recorder.h  RecordingSet.h  Stopwatch.cpp  Stopwatch.h  main.cpp
src/Visual/: App.cpp  App.h  CMakeLists.txt  Chart.h  ColoredSeries.h  Label.cpp  Label.h  Player.cpp  Player.h  PlayerPool.h  Playlist.cpp  Playlist.h  Rectangle.cpp  Rectangle.h  Scheduler.h  Series.h  main.cpp
test/: AccessLoggerTest.cpp  ActionDump.cpp  CMakeLists.txt  ColoredSeries.cpp  Makefile  NotifyingIteratorTest.cpp  ProcessTime.cpp  RecordingPauseTest.cpp  TextRendering.cpp  access_logger.sh  bad_log.txt  chrono.cpp  emplace.cpp  emplaceBlocks.cpp  enable.cpp  exception  exception.cpp  label.cpp  logger_old.cpp  logging.sh  playlist.cpp  record.cpp  series.cpp  sleep.cpp  stopwatch.cpp  stream.cpp  testChart.cpp  ttf_test.cpp  txt_logs.tar  umap_copy_ctor.cpp  visualization.cpp
test/scheduler/: Scheduler.h  sched_test.cpp
test/sheduler/: ExecutionQueue  Scheduler.h
